# mesh-segmentation

./: .gitignore  .gitmodules  CMakeLists.txt  ConsoleApplication1.sln  Mac_build.sh  README.md
ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  MS.txt  SEGMENT2  Source.cpp  cement.txt  cinema.txt  fuel_cell.txt  hamster.txt  lenna.txt  param.txt  snake.txt  sound.txt  star.txt  test.txt  vanda_60.txt  variant.txt
ConsoleApplication1/DEMO/: draw.cpp  draw.h  user_interface.cpp
ConsoleApplication1/DSC_seg.xcodeproj/: project.pbxproj
ConsoleApplication1/SEGMENT/: adapt_mesh.cpp  adapt_mesh.h  curve.h  define.cpp  define.h  dyn_integral.cpp  dyn_integral.h  dynamics.cpp  dynamics.h  dynamics_mul.cpp  gl_debug_helper.cpp  gl_debug_helper.h  gradient_f.cpp  image.cpp  image.h  interface.cpp  interface.h  main.cpp  options_disp.cpp  setting_io.cpp  setting_io.hpp
ConsoleApplication1/lpng1624/: libpng.lib  zdll.lib  zlib.lib
ConsoleApplication1/matlab/: MS_1_large.txt  MS_5.txt  MS_8.txt  MS_cement_1.txt  MS_cement_2.txt  MS_cement_init.txt  MS_hamster_1.txt  MS_hamster_2.txt  MS_hamster_init.txt  MS_init.txt  MS_last.txt  main.m  variant_1_large.txt  variant_5.txt  variant_8.txt  variant_cement_1.txt  variant_cement_2.txt  variant_cement_init.txt  variant_hamster_1.txt  variant_hamster_2.txt  variant_hamster_init.txt  variant_init.txt  variant_last.txt
ConsoleApplication1/src/: DSC.cpp  DSC.h  draw.cpp  velocity_function.h
MAC_build/mesh-segmentation.xcodeproj/: project.pbxproj
data/: MS.txt  brain.txt  cement.txt  hamster.txt  head.txt  snake.txt  snowman.txt  sound.txt  star.txt  vand.txt  variant.txt
other/: otsu_multi.h
segment/: adapt_mesh.cpp  adapt_mesh.h  curve.cpp  define.cpp  define.h  draw.cpp  draw.h  dynamics_edge.cpp  dynamics_edge.h  dynamics_mul.cpp  dynamics_mul.h  export.h  gl_debug_helper.cpp  gradient_f.h  helper.cpp  helper.h  image.cpp  image.h  interface.cpp  interface.h  main.cpp  messageBox.h  options_disp.cpp  polygon_f.h  setting_io.cpp  texture_helper.cpp  texture_helper.h  tri_box_overlap.h
src/: adapt_mesh.cpp  adapt_mesh.h  define.h  draw.cpp  draw.h  dynamics_mul.cpp  dynamics_mul.h  gl_debug_helper.cpp  gl_debug_helper.h  image.cpp  interface.cpp  interface.h  options_disp.h  polygon_f.cpp  setting_io.cpp  setting_io.hpp  t_image.cpp  t_image.h  texture_helper.cpp  texture_helper.h
src/other/: CImg.h
(+12 files in other folders)
